--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,39 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div class="jumbotron">
 			<div class="container">
-				{% if yelp_results %}
-					<h2>For your search in {{ location }}</h2>
-					<br>
-					<h5>How about:</h5>
-					<div>
-					{% for business in yelp_results['businesses'] %}
-						<h1>{{ business['name'] }} </h1>
-						<h3>{{ business['display_phone'] }}</h3>
-						<h3>{{ business['location']['address1'] }}, {{ business['location']['city'] }}</h3>
-						<br>Or...
-						<br>
-					{% endfor %}
-					</div>
-					<div>
-						<h2>Search again:</a></h2>
-						<form action="/" class="form-inline">
-						<div class="form-group">
-							<input type="text" name="location" placeholder="Enter your city here" class="form-control">
-						</div>
-						<input type="submit" value="Submit" class="btn btn-primary">
-					</form>
-					</div>
-				{% else %}
-					<h1>Hello! Enter your location to search for restaurants nearby.</h1>
-					<form action="/" class="form-inline">
-						<div class="form-group">
-							<input type="text" name="location" placeholder="Enter your city here" class="form-control">
-						</div>
-						<input type="submit" value="Submit" class="btn btn-primary">
-					</form>
-				{% endif %}
-				<a href="{{ url_for('about') }}">About this project</a>
+				<h1>RT Quick Ticket Form v0</h1>
 			</div>
+		</div>
+		<div class="container">
+			<h5>Subject:</h5>
+			<div class="form-group">
+				<input type="text" name="subject" placeholder="Ticket subject" class="form-control">
+			</div>
+
+			<h5>Assign to: </h5>
+
+			<div class="btn-group" data-toggle="buttons">
+				<label class="btn btn-primary active">
+					<input type="radio" name="owner" id="astokes" autocomplete="off" checked>Alex
+				</label>
+				<label class="btn btn-primary">
+					<input type="radio" name="owner" id="khuong" autocomplete="off">Khuong
+				</label>
+				<label class="btn btn-primary">
+					<input type="radio" name="owner" id="sdespote" autocomplete="off">Stan
+				</label>
+			</div>
+		</div>
+		<br/>
+		<div class="container">
+			<h6><a href="{{ url_for('about') }}">About this project</a></h6>
 		</div>
 	</body>
 </html>
