lots of buttons

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,8 @@
 	<body>
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Welcome to my One Month Python project</h1>
-				<p>My name is Alex Stokes, I'm one of the founders of 
-				ClickySticks. I built this project for <a href="http://www.onemonth.com/courses/one-month-python">One Month Python</a>.
+				<h1>Welcome to my sick RT form</h1>
+				<p>I built this becuase I didn't like the one we had.</a><br/>
 				<a href="{{ url_for('index') }}">Back to homepage</a>
 				</p>
 			</div>
